# stator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  Jenkinsfile  README.md  annotated.html  appveyor.yml  binary__ops_8hpp.html  binary__ops_8hpp_source.html  box_8hpp.html  box_8hpp_source.html  build-wheels.sh  classUnitTests-members.html  classUnitTests.html  classes.html  classstator_1_1Exception-members.html  classstator_1_1Exception.html  classstator_1_1geometry_1_1AABox-members.html  classstator_1_1geometry_1_1AABox.html  classstator_1_1geometry_1_1Ball-members.html  classstator_1_1geometry_1_1Ball.html  classstator_1_1geometry_1_1HalfSpace-members.html  classstator_1_1geometry_1_1HalfSpace.html  classstator_1_1geometry_1_1InverseBall-members.html  classstator_1_1geometry_1_1InverseBall.html  classstator_1_1geometry_1_1Plane-members.html  classstator_1_1geometry_1_1Plane.html  classstator_1_1geometry_1_1Point-members.html  classstator_1_1geometry_1_1Point.html  classstator_1_1geometry_1_1detail_1_1UnitBall.html  classstator_1_1orphan_1_1StackVector-members.html  classstator_1_1orphan_1_1StackVector.html  classsym_1_1ConstantRT-members.html  classsym_1_1ConstantRT.html  classsym_1_1Polynomial-members.html  classsym_1_1Polynomial.html  classsym_1_1Polynomial_3_01Order_00_01C_3_01num_00_01denom_01_4_00_01PolyVar_01_4.html  (+475 more)
examples/: symbolic_example.cpp
pysrc/stator/: __init__.py  core.cpp
scripts/: manylinux_entrypoint.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+68 more)
stator/: config.hpp  constants.hpp  exception.hpp  hash.hpp  repr.hpp  string.hpp  unit_test.hpp  xml.hpp
stator/geometry/: AABB.hpp  box.hpp  indicator.hpp  intersect.hpp  inverse.hpp  object.hpp  plane.hpp  point.hpp  sphere.hpp
stator/orphan/: stack_vector.hpp  static_list.hpp  template_config.hpp
stator/symbolic/: ad.hpp  array.hpp  array_rt.hpp  binary_ops.hpp  binary_ops_rt.hpp  constants.hpp  constants_rt.hpp  context.hpp  dict.hpp  dict_rt.hpp  empty_sum.hpp  functions.hpp  integrate.hpp  interval.hpp  list_rt.hpp  numeric.hpp  operators.hpp  parser.hpp  polynomial.hpp  precision.hpp  print.hpp  runtime.hpp  simplify.hpp  sub.hpp  symbolic.hpp  taylor.hpp  unary_ops.hpp  unary_ops_rt.hpp  uncertainty.hpp  units.hpp  variable.hpp  variable_rt.hpp
testing/: geometry_shapes.cpp  geometry_sphere.cpp  orphan_static_list.cpp  stack_vector.cpp  symbolic_ad.cpp  symbolic_generic.cpp  symbolic_integration.cpp  symbolic_numeric.cpp  symbolic_parser.cpp  symbolic_poly_solve_roots.cpp  symbolic_poly_taylor.cpp  symbolic_polynomial.cpp  symbolic_runtime.cpp
tests/: geometry_shapes_test.cpp  orphan_static_list_test.cpp  stack_vector_test.cpp  stator_example_test.py  stator_test.py  symbolic_ad_test.cpp  symbolic_array_test.cpp  symbolic_generic_test.cpp  symbolic_integration_test.cpp  symbolic_interval_test.cpp  symbolic_numeric_test.cpp  symbolic_parser.cpp  symbolic_parser_test.cpp  symbolic_poly_solve_roots_test.cpp  symbolic_poly_taylor_test.cpp  symbolic_polynomial_test.cpp  symbolic_runtime.cpp  symbolic_runtime_test.cpp  symbolic_uncertainty_test.cpp  symbolic_units_test.cpp  test_geometry_shapes.cpp  test_stack_vector.cpp  test_stator.py  test_symbolic_generic.cpp  test_symbolic_parser.cpp  test_symbolic_poly_solve_roots.cpp  test_symbolic_poly_taylor.cpp  test_symbolic_polynomial.cpp  test_symbolic_runtime.cpp
